--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 baseurl         = "https://acsyl.github.io/"
 theme           = "casper-two"
+publishDir      = "docs/"
 languageCode    = "en-US"
 disqusShortname = ""
 paginate        = 6
