--- a/config.toml
+++ b/config.toml
@@ -47,12 +47,12 @@ paginate        = 6
 
 [[menu.main]]
   name = "Projects"
-  url = "/tags/golang/"
+  url = "/tags/Projects/"
   weight = 100
 
 [[menu.main]]
-  name = "Food"
-  url = "/categories/food/"
+  name = "About me"
+  url = "/categories/About me/"
   weight = 99
 
 [[menu.main]]
